# pipecat-local-tts-server

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: protocol.md
docs/dev_plans/: 20260624-feature-tts-server-v1.md  20260625-feature-tts-dia-backend.md  20260628-feature-pocket-tts-extended-voices.md
docs/rich/: _rich_manifest.json  index.html  plan-20260624-feature-tts-server-v1.html  plan-20260624-feature-tts-server-v1.rich.html
docs/rich/_fragments/: 20260624-feature-tts-server-v1__acceptance-criteria.html  20260624-feature-tts-server-v1__architecture-call-flow.html  20260624-feature-tts-server-v1__companion-plan.html  20260624-feature-tts-server-v1__conduct-readiness.html  20260624-feature-tts-server-v1__context.html  20260624-feature-tts-server-v1__decided-defaults-locked-so-conduct-doesn-t-fork-revisit-only-if-a-phase-surfaces-a-reason.html  20260624-feature-tts-server-v1__findings.html  20260624-feature-tts-server-v1__implementation-checklist.html  20260624-feature-tts-server-v1__locked-design-decisions.html  20260624-feature-tts-server-v1__objective.html  20260624-feature-tts-server-v1__preamble.html  20260624-feature-tts-server-v1__progress.html  20260624-feature-tts-server-v1__requirements.html  20260624-feature-tts-server-v1__technical-specifications.html  20260624-feature-tts-server-v1__testing-notes.html
docs/upstream/: mlx-audio-kokoro-sinegen-broadcast.md
examples/: pipecat_tts_service.py  reference_client.py
scripts/: install_tts_agent.sh  prosody_check.py  render_tts_plist.py  verify_mlx_tts_api.py
scripts/profiling/: README.md  kokoro_generate_split.py  rtf_benchmark.py
tests/: _helpers.py  test_auth.py  test_backpressure.py  test_capabilities_extras.py  test_config_validation.py  test_dia_lean.py  test_endpoint_resolution.py  test_import_safety.py  test_justfile_recipes.py  test_keepalive.py  test_kokoro_backend.py  test_kokoro_language_advertise.py  test_kokoro_lazy_import.py  test_multiconn_fairness.py  test_pcm16_clip.py  test_pipecat_adapter.py  test_pocket_backend.py  test_pocket_lean.py  test_protocol.py  test_protocol_version.py  test_render_tts_plist.py  test_resource_limits.py  test_review_fixes.py  test_server_cleartext_guard.py  test_session_lifecycle.py  test_stale_socket.py  test_status.py  test_status_port.py  test_stream_util_audio_conversion.py  test_streaming_and_cancel.py  test_tone_end_to_end.py  test_voxtral_backend.py  test_voxtral_lean.py
tests/smoke/: README.md  dia_dialogue_smoke.py  latency_smoke.py  multiconn_smoke.py  reconnect_smoke.py  run_multiconn.sh  run_reconnect.sh  run_smoke.sh
tests/smoke/fixtures/dia/: README.md  interview_interruption_inline.txt  interview_interruption_newline.txt  podcast_turntaking.txt
tts_server/: __init__.py  __main__.py  _audio.py  backend.py  client.py  env.py  protocol.py  server.py
tts_server/backends/: __init__.py  _stream_util.py  dia.py  kokoro.py  pocket_tts.py  voxtral_tts.py
