[project]
name = "pipecat-local-tts-server"
version = "0.3.0"
description = "Standalone local WebSocket text-to-speech (TTS) server, client, and pluggable mlx-audio backends for the Pipecat ecosystem"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Varun Singh", email = "varun@varunsingh.net" }]
keywords = ["tts", "text-to-speech", "kokoro", "mlx", "websocket", "pipecat", "speech", "audio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # The wire transport. The client (TTSClient) and the server runtime both
    # depend on websockets; it is the only hard runtime dependency of the base
    # package. Backend TTS engines live behind the [kokoro] (and later
    # [voxtral_tts] / [pocket_tts] / [dia]) extras so a client-only consumer
    # (e.g. a bot that just talks to a running server) does not pull mlx-audio
    # or its heavy transitive deps (torch, spacy, ...). numpy is dev-only and
    # is NEVER a runtime dependency — ToneBackend and the shared float->pcm16
    # converter are stdlib-only.
    "websockets>=13.0",
]

[project.optional-dependencies]
# Pure client deps — what a downstream consumer of `tts_server.client` needs
# without pulling any mlx-audio runtime.
client = ["websockets>=13.0"]
# Full server install with the Kokoro mlx-audio backend.
#
# mlx-audio is pinned to 0.4.4 (R8): the TTS API drifted between 0.3.0 and
# 0.4.4 (streaming-chunk fields appeared, voxtral_tts was added, pocket_tts
# kwargs changed). An unpinned bump can silently break facts verified via
# scripts/verify_mlx_tts_api.py against 0.4.4 — re-run that script before
# widening the pin. Importing Kokoro pulls misaki (G2P) -> num2words/spacy/
# en_core_web_sm AND torch, so this extra is heavy by design; keep it out of
# lean base.
#
# mlx-audio 0.4.4 imports misaki lazily (a helpful ImportError at synth time if
# absent), so it is NOT a transitive hard dep of mlx-audio — Kokoro's G2P needs
# it declared explicitly. ``misaki[en]`` drags in num2words/spacy/en_core_web_sm
# AND torch, which is what makes this extra heavy (R3); keep it behind the extra.
kokoro = ["websockets>=13.0", "mlx-audio==0.4.4", "misaki[en]"]
# Full server install with the Voxtral TTS mlx-audio backend (Phase 5a) — the
# streaming reference backend (native ``stream``/``streaming_interval``, no
# ``ref_audio`` cloning channel).
#
# mlx-audio is pinned to 0.4.4 (R8), same policy as the kokoro extra. Voxtral's
# tekken tokenizer needs ``mistral-common[audio]`` (the Mistral speech tokenizer
# that builds the synthesis prompt); without it ``model.generate()`` raises at
# load/encode time. It is NOT a transitive hard dep of mlx-audio, so the extra
# declares it explicitly (mirrors how ``kokoro`` declares ``misaki[en]``).
# Bounded to ``>=1.11,<2`` (same pinning discipline as R8): the ``pip install``
# end-user path ignores ``uv.lock`` and would otherwise float to an arbitrary
# future major — verified against 1.11.x on arm64.
#
# LICENSE NOTE (non-commercial): the Voxtral-4B-TTS weights this backend loads
# (``mlx-community/Voxtral-4B-TTS-2603-mlx-bf16``) are released under
# **CC-BY-NC** — non-commercial use only. This extra installs the *runtime*
# (code), not the weights; the weights download on first ``serve``. Operators
# are responsible for honouring the model license. Kokoro (Apache-2.0) remains
# the default commercial-safe backend. See README → "Backends & licenses".
voxtral_tts = ["websockets>=13.0", "mlx-audio==0.4.4", "mistral-common[audio]>=1.11,<2"]
# Full server install with the Pocket TTS mlx-audio backend (Phase 5b) — a
# second streaming:true backend; also the no-cloning negative-guard backend
# (its generate() exposes ref_audio/frames_after_eos which we deliberately leave
# unwired, decision #2).
#
# mlx-audio is pinned to 0.4.4 (R8). Pocket needs NO bespoke tokenizer dep: its
# tokenizer (sentencepiece, via mlx-lm) plus huggingface-hub/requests/transformers
# are all transitive hard deps of mlx-audio — so unlike kokoro (misaki) and
# voxtral_tts (mistral-common), this extra is just mlx-audio.
#
# LICENSE NOTE: the Pocket TTS weights (``mlx-community/pocket-tts``) are
# **CC-BY-4.0** — permissive, commercial use allowed WITH attribution (verified
# via the HF model card). Unlike voxtral_tts (CC-BY-NC), Pocket is
# commercial-safe. The package ships only runtime; weights download on first
# ``serve``. See README → "Backends & licenses".
pocket_tts = ["websockets>=13.0", "mlx-audio==0.4.4"]
# Full server install with the dia multi-speaker DIALOGUE mlx-audio backend
# (Phase 5c / its own plan) — a segment-level (``split_pattern='\n'``, like
# Kokoro) ``streaming:false`` backend. Speakers are addressed purely in-text via
# ``[S1]``/``[S2]`` tags inside ``plain`` text (``voice_count: 0``); no voice
# cloning (``ref_audio``/``ref_text`` left unwired, decision #2).
#
# mlx-audio is pinned to 0.4.4 (R8). dia needs NO bespoke tokenizer dep — like
# Pocket, its tokenizer and transitive deps come through mlx-audio — so this
# extra is just mlx-audio (unlike kokoro's misaki / voxtral_tts's
# mistral-common).
#
# LICENSE NOTE: the dia weights (``mlx-community/Dia-1.6B-fp16``) are released
# under **Apache-2.0** — permissive, commercial use allowed. The package ships
# only runtime; weights download on first ``serve``. See README → "Backends &
# licenses".
dia = ["websockets>=13.0", "mlx-audio==0.4.4"]
# Reference Pipecat-framework adapter (``examples/pipecat_tts_service.py``).
# This is for running the *example*, not the server itself — it pulls the
# Pipecat framework (and ``client`` for ``tts_server.client``). It is NOT a
# dependency of the server or the lean client; a consumer that already has
# Pipecat installed does not need this extra.
#
# pipecat-ai is pinned to ==1.4.0 (same policy as mlx-audio): the adapter must
# override TTSService's READ-ONLY ``sample_rate`` property by writing its private
# ``_sample_rate`` backing field (no public post-handshake setter exists), so a
# version skew can silently mis-negotiate the audio rate. 1.4.0 is the version
# verified by tests/test_pipecat_adapter.py and exercised by the test-examples CI
# job. LocalTTSService._update_sample_rate also guards the write at runtime
# (raises if the field is gone). Re-run the adapter tests before widening this pin.
examples = ["websockets>=13.0", "pipecat-ai==1.4.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    # Test/verification infrastructure only. numpy is used by the mlx-audio
    # verification scripts (scripts/verify_mlx_tts_api.py) and by tests that
    # explicitly opt into it. It is intentionally NOT a runtime dependency:
    # runtime package code (ToneBackend, the float->pcm16 converter) stays
    # stdlib-only so the lean base never requires a dev-only dependency.
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/vr000m/pipecat-local-tts-server"
Repository = "https://github.com/vr000m/pipecat-local-tts-server"
Issues = "https://github.com/vr000m/pipecat-local-tts-server/issues"

[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Import name stays `tts_server` so every `import tts_server` callsite, every
# test, and the `python -m tts_server` invocation work without rename.
module-name = "tts_server"
module-root = ""

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Verification scripts under scripts/ are importable under pytest (mirrors the
# stt repo), so tests that drive them can `from scripts... import ...`.
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
